Footer fixed, need to figure out what's going on with the spacing at the top of the about us page.

--- a/css/jodak.css
+++ b/css/jodak.css
@@ -6,17 +6,21 @@
 }
 
 html, body {
-    position: relative;
-    min-height: 100%;
-    margin: 0;
-    height: 100%;
-    width: 100%;
+    height:100%;
+    width:100%;
     overflow-x: hidden;
 }
 
 body {
+    display:table;
     background-color: #FAFAFA;
 }
+
+.body, footer {
+    width: 100%;
+    display:table-row;
+}
+
 footer {
     position: absolute;
     right: 0;
@@ -28,7 +32,8 @@ footer {
 
 .body {
     width: 100%;
-    margin-top: 65px;
+    margin: 65px 0 50px;
+    display:table-row;
 }
 
 .footer-text {
@@ -233,7 +238,7 @@ ul.navigation li {
 
 /* HORIZONTAL LINE */
 hr.faded {
-    margin: 2px auto 5px;
+    margin: 2px auto 2%;
     text-align: center;
     width: 10%;
     border: 0;
